--- a/app/globals.css
+++ b/app/globals.css
@@ -53,6 +53,22 @@ body {
   border-radius: 20px;
 }
 
+.gradient-border-box {
+  background:
+  linear-gradient(rgba(51, 54, 76, 0.9), rgba(34, 36, 48, 0.9)) padding-box,
+    linear-gradient(100deg, #00f4ff 1%, #008af2 50%, #0020e4 90%) border-box;
+  border: 2px solid transparent;
+  border-radius: 20px;
+}
+
+.gradient-border-box-reverse {
+  background:
+  linear-gradient(rgba(34, 36, 48, 0.9), rgba(51, 54, 76, 0.9)) padding-box,
+    linear-gradient(100deg, #0020e4 1%, #008af2 50%, #00f4ff 90%) border-box;
+  border: 2px solid transparent;
+  border-radius: 20px;
+}
+
 .bg-gradient-radial {
   background-size: 100% 100%;
   background-position: 0px 0px;
