--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: "regular";
+  src: url("/fonts/coinbase-sans-regular.woff2") format("woff2");
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
   font-family: "regular", sans-serif;
   background: hsl(var(--background));
